--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,9 +23,9 @@ logging.config=classpath:log4j.properties
  
  
 # Local Database
-spring.datasource.url=jdbc:mysql://localhost:3306/kipl
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/kipl
+#spring.datasource.username=root
+#spring.datasource.password=root
  
 # UAT Database
 #spring.datasource.url=jdbc:mysql://10.20.0.155:3306/nsl_nvm
@@ -51,13 +51,24 @@ spring.datasource.password=root
 #spring.datasource.password=WF8YPyrgZc247
  
  
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.show-sql=true
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+##spring.jpa.properties.hibernate.jdbc.batch_size=20
+#spring.jpa.properties.hibernate.order_inserts=true
+#spring.jpa.properties.hibernate.order_updates=true
+
+spring.datasource.url=jdbc:postgresql://ep-raspy-field-a5b8dxy9-pooler.us-east-2.aws.neon.tech:5432/kipl-admin?sslmode=require
+spring.datasource.username=kipl-admin_owner
+spring.datasource.password=npg_eV8dsx9jInMr
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA (Optional)
+spring.jpa.database=postgresql
 spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.jdbc.batch_size=20
-spring.jpa.properties.hibernate.order_inserts=true
-spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
  
  
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
