--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,10 @@ logging.config=classpath:log4j.properties
 spring.datasource.url=jdbc:mysql://localhost:3306/kipl
 spring.datasource.username=root
 spring.datasource.password=root
+
+#spring.datasource.url=jdbc:mysql://103.174.226.196:33122/kipl
+#spring.datasource.username=emtransq
+#spring.datasource.password=eMtrnsq@123
 # 
 # UAT Database
 #spring.datasource.url=jdbc:mysql://10.20.0.155:3306/nsl_nvm
