--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
-spring.mvc.view.prefix: /WEB-INF/
-spring.mvc.view.suffix: .jsp
- 
- 
-server.port=8080
+spring.application.name=kipl
+
+# Set the absolute path for the log file
+logging.file.path=C:/logs/kipl
+logging.file.name=kipl
+server.port=8081
 logging.config=classpath:log4j.properties
+
+#spring.mvc.view.prefix: /WEB-INF/
+#spring.mvc.view.suffix: .jsp
 
 # OAuth Configuration
 #oauth.base-url=https://sandbox.woohoo.in
@@ -23,13 +27,27 @@ logging.config=classpath:log4j.properties
  
  
 # Local Database
+#spring.datasource.url=jdbc:mysql://localhost:3306/kipl
+#spring.datasource.username=root
+#spring.datasource.password=root
+
 spring.datasource.url=jdbc:mysql://localhost:3306/kipl
+#spring.datasource.username=emtransq
+#spring.datasource.password=eMtrnsq@123
 spring.datasource.username=root
 spring.datasource.password=root
 
-#spring.datasource.url=jdbc:mysql://103.174.226.196:33122/kipl
-#spring.datasource.username=emtransq
-#spring.datasource.password=eMtrnsq@123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+
+
+
 # 
 # UAT Database
 #spring.datasource.url=jdbc:mysql://10.20.0.155:3306/nsl_nvm
@@ -55,14 +73,6 @@ spring.datasource.password=root
 #spring.datasource.password=WF8YPyrgZc247
  
  
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.jdbc.batch_size=20
-spring.jpa.properties.hibernate.order_inserts=true
-spring.jpa.properties.hibernate.order_updates=true
-
 #spring.datasource.url=jdbc:postgresql://ep-raspy-field-a5b8dxy9-pooler.us-east-2.aws.neon.tech:5432/kipl-admin?sslmode=require
 #spring.datasource.username=kipl-admin_owner
 #spring.datasource.password=npg_eV8dsx9jInMr
@@ -75,7 +85,6 @@ spring.jpa.properties.hibernate.order_updates=true
 #spring.jpa.properties.hibernate.format_sql=true
  
  
-spring.datasource.type=com.zaxxer.hikari.HikariDataSource
  
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -100,6 +109,8 @@ spring.datasource.hikari.minimum-idle=10
 spring.datasource.hikari.idle-timeout=300000
 server.connection-timeout=1800000
 
+spring.main.allow-bean-definition-overriding=true
+
 #spring.datasource.hikari.maximum-pool-size=10
 #spring.datasource.hikari.minimum-idle=5
 #spring.datasource.hikari.idle-timeout=60000
@@ -111,8 +122,7 @@ spring.servlet.multipart.max-file-size=128MB
 spring.servlet.multipart.max-request-size=128MB
  
 # Set the absolute path for the log file
-logging.file.path=C:/logs/KIPL
-logging.file.name=KIPL
+
 
 
 
