--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,7 @@
 rootLogger.level = INFO
-property.filename = C:/Logs/KIPL.log
+#property.filename = C:/Logs/KIPL.log 
+property.filename = /tmp/log/kipl.log
+
 property.maxFileSize = 25MB
 appenders = R, console
 
